tests/baselines/reference/functionCall7.errors.txt
tests/cases/compiler/functionCall7.ts(5,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/functionCall7.ts(6,5): error TS2345: Argument of type '4' is not assignable to parameter of type 'c1'.
tests/cases/compiler/functionCall7.ts(7,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/functionCall7.ts (3 errors) ====
    module m1 { export class c1 { public a; }}
    function foo(a:m1.c1){ a.a = 1; }; 
    var myC = new m1.c1(); 
    foo(myC); 
    foo(myC, myC); 
    ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo(4);
        ~
!!! error TS2345: Argument of type '4' is not assignable to parameter of type 'c1'.
    foo();
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    